--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ header {
 }
 
 .guess {
-  min-width: 303px;
-  height: 328px;
+  min-width: 250px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,6 +78,12 @@ header {
 
 .computer-guess {
   background-color: #ececec;
+  border-radius: 1em;
+  transition: transform .5s;
+}
+
+.computer-guess:hover {
+  transform: scale(1.2);
 }
 
 #computer-guess {
@@ -88,6 +94,12 @@ header {
 
 .human-guess {
   border: 1px solid #979797;
+  border-radius: 1em;
+  transition: transform .5s;
+}
+
+.human-guess:hover {
+  transform: scale(1.2);
 }
 
 .guess input {
@@ -149,6 +161,13 @@ header {
   border: none;
   font-weight: 700;
   font-size: 14px;
+  border-radius: 2em;
+}
+
+.button:hover {
+  background-color: #0b41bd;
+  color: #fff;
+  border: solid 1px #4c7ef3;
 }
 
 input[type=number]::-webkit-inner-spin-button {
@@ -163,6 +182,7 @@ input[type=number]::-webkit-inner-spin-button {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
+  border-radius: 2em;
 }
   
 .button[disabled] {
